[gd_scene load_steps=2 format=3 uid="uid://8jau8lfwyexw"]

[ext_resource type="Script" path="res://hud.gd" id="1_vaw2x"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_vaw2x")

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.5
offset_top = -44.0
offset_right = 221.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "CamperHustle"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -240.0
offset_right = 104.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_timer_timeout"]
